src/objects/LMSSourceDescSda__c.object
<CustomObject>
    <fields>
        <fullName>c_prop_cd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>c_prop_cd_fk</description>
        <label>Property code</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Lms Source Desc Sda</relationshipLabel>
        <relationshipName>Lms_Source_Desc_Sda1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c_quality_cd__c</fullName>
        <description>c_quality_cd</description>
        <label>c_quality_cd</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_rms_group_source_cd__c</fullName>
        <description>c_rms_group_source_cd</description>
        <label>c_rms_group_source_cd</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_source_cat1__c</fullName>
        <description>c_source_cat1</description>
        <label>c_source_cat1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_source_cat2__c</fullName>
        <description>c_source_cat2</description>
        <label>c_source_cat2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_source_cat3__c</fullName>
        <description>c_source_cat3</description>
        <label>c_source_cat3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_source_cat_sda__c</fullName>
        <description>c_source_cat_sda</description>
        <label>c_source_cat_sda</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_source_cd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source code</label>
        <referenceTo>SourceCode__c</referenceTo>
        <relationshipLabel>LMSSourceDescSda</relationshipLabel>
        <relationshipName>LMSSourceDescSda</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c_source_cd_desc__c</fullName>
        <description>c_source_cd_desc</description>
        <label>c_source_cd_desc</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_source_group__c</fullName>
        <description>c_source_group</description>
        <label>c_source_group</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_user_flag1__c</fullName>
        <description>c_user_flag1</description>
        <label>c_user_flag1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_user_flag2__c</fullName>
        <description>c_user_flag2</description>
        <label>c_user_flag2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_user_flag3__c</fullName>
        <description>c_user_flag3</description>
        <label>c_user_flag3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_last_update_ts__c</fullName>
        <description>d_last_update_ts</description>
        <label>d_last_update_ts</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>d_timestamp__c</fullName>
        <description>d_timestamp</description>
        <label>d_timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>f_user_amt1__c</fullName>
        <description>f_user_amt1</description>
        <label>f_user_amt1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_user_amt2__c</fullName>
        <description>f_user_amt2</description>
        <label>f_user_amt2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_user_amt3__c</fullName>
        <description>f_user_amt3</description>
        <label>f_user_amt3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_source_cat1_sort__c</fullName>
        <description>i_source_cat1_sort</description>
        <label>i_source_cat1_sort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_source_cat2_sort__c</fullName>
        <description>i_source_cat2_sort</description>
        <label>i_source_cat2_sort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_source_cat3_sort__c</fullName>
        <description>i_source_cat3_sort</description>
        <label>i_source_cat3_sort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_source_cat_sda_sort__c</fullName>
        <description>i_source_cat_sda_sort</description>
        <label>i_source_cat_sda_sort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_user_score1__c</fullName>
        <description>i_user_score1</description>
        <label>i_user_score1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_user_score2__c</fullName>
        <description>i_user_score2</description>
        <label>i_user_score2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_user_score3__c</fullName>
        <description>i_user_score3</description>
        <label>i_user_score3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>LMSSourceDescSda</label>
    <nameField>
        <displayFormat>LSDS-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LMSSourceDescSda</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>